--- a/inc/style.css
+++ b/inc/style.css
@@ -11,6 +11,7 @@ body{
     font-family: "Coda", Sans;
     font-size: 1em;
     background: #03a9f4 linear-gradient(45deg, #8bc34a 15%, #03a9f4 85%);
+    background-repeat: no-repeat;
 }
 header, footer{
     width: 100%;
