--- a/inc/style.css
+++ b/inc/style.css
@@ -10,6 +10,7 @@ body{
     text-align: center;
     font-family: "Coda", Sans;
     font-size: 1em;
+    color: black;
     background: #03a9f4 linear-gradient(45deg, #8bc34a 15%, #03a9f4 85%);
 }
 header, footer{
@@ -26,16 +27,13 @@ header div, footer div, ul{
 }
 header div{
     border-bottom: 1px dotted grey;
-    -webkit-box-shadow: 0 5px 5px -2px rgba(0, 0, 0, 0.5);;
-    -moz-box-shadow: 0 5px 5px -2px rgba(0, 0, 0, 0.5);;
-    box-shadow: 0 5px 5px -2px rgba(0, 0, 0, 0.5);;
 }
 header, header div{
     top: 0;
-    height:5em;
+    height:3.8em;
 }
     h1{
-        margin-top: 1em;
+        margin-top: 0.6em;
         font-size: 1.4em;
     }
 footer, footer div{
@@ -45,5 +43,8 @@ footer, footer div{
 }
 footer div{
     border-top: 1px dotted grey;
+}
+footer a{
+    color: black;
 }
 
