--- a/inc/style.css
+++ b/inc/style.css
@@ -16,36 +16,28 @@ body{
 header, footer{
     width: 100%;
     position: fixed;
-}
-header div, footer div{
-    position: fixed;
     margin-left: 10%;
 }
-header div, footer div, ul{
+header, footer, ul{
     width: 80%;
     background-color: white;
 }
-header div{
+header{
     border-bottom: 1px dotted grey;
-}
-header, header div{
     top: 0;
-    height:3.8em;
+    min-height:3.8em;
 }
     h1{
         margin-top: 0.6em;
         font-size: 1.4em;
     }
-footer, footer div{
-    bottom: 0;    
-    line-height: 2.5em;
-    height: 5em;
+footer{
+    bottom: 0;
+    height: 3em;
+    padding-top: 1em;
     font-size: 0.8em;
-}
-footer div{
     border-top: 1px dotted grey;
 }
 footer a{
     color: black;
 }
-
